Java 17 OpenRewrite Script