@@ -33,6 +33,7 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.OutputStream;
 import java.io.PrintWriter;
+import java.io.Serial;
 import java.io.UnsupportedEncodingException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -71,6 +72,7 @@ public class MapPrinterServlet extends BaseMapServlet {
     public static final Logger SPEC_LOGGER = LogManager.getLogger(BaseMapServlet.class.getPackage().toString() + ".spec");
     protected static final String TEMP_FILE_PREFIX = "mapfish-print";
     protected static final String TEMP_FILE_METADATA_PREFIX = "mapfish-print-metadata";
+    @Serial
     private static final long serialVersionUID = -4706371598927161642L;
     private static final String CONTEXT_TEMPDIR = "javax.servlet.context.tempdir";
     private static final String INFO_URL = "/info.json";
@@ -659,7 +661,7 @@ public class MapPrinterServlet extends BaseMapServlet {
                 try {
                     return new SimpleDateFormat(pattern).format(date);
                 } catch (Exception e) {
-                    LOGGER.log(Level.WARN, String.format("Unable to format timestamp according to pattern: ${%s}", pattern), e);
+                    LOGGER.log(Level.WARN, "Unable to format timestamp according to pattern: ${%s}".formatted(pattern), e);
                     return "${" + pattern + "}";
                 }
             }
